--- a/idex.html
+++ b/idex.html
@@ -8,7 +8,7 @@
 <body>
     
 <h3>vai re vai git mela kothin</h3>
-<h4>faki mara jabe na</h4>
-<h3>git bujtei hobe.</h3>
+<h3>vai hoye ja</h3>
+<p>gooo</p>
 </body>
 </html>
