--- a/idex.html
+++ b/idex.html
@@ -6,9 +6,9 @@
     <title>Git vallage na</title>
 </head>
 <body>
-    
+    t
 <h3>vai re vai git mela kothin</h3>
-<h3>vai hoye ja</h3>
+<h3>hoye ja dhur</h3>
 <p>gooo</p>
 </body>
 </html>
