--- a/idex.html
+++ b/idex.html
@@ -8,7 +8,7 @@
 <body>
     t
 <h3>vai re vai git mela kothin</h3>
-<h3>hoye ja dhur</h3>
+<h3>mathay dhuktece na </h3>
 <p>gooo</p>
 </body>
 </html>
